# auction

./: Cargo.toml  README.md
auction/: Cargo.toml
auction-registry/: Cargo.toml
auction-registry/src/: auction.rs  lib.rs  model.rs
auction-registry/wit/: auction-registry.wit
auction/src/: auction_logic.rs  lib.rs  model.rs
auction/wit/: auction.wit
src/: auction_logic.rs  lib.rs  model.rs
wit/: auction.wit
