[package]
name = "auction-registry"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "lib"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
once_cell = "1.17.1"
rand = "0.8.5"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
wit-bindgen = "0.7.0"
reqwest = { version = "0.11.6", features = ["json"], git = "https://github.com/golemcloud/reqwest", branch = "initial-wasi-impl" }
serde = { version = "1.0.130", features = ["derive"] }

[package.metadata.component.target]
path = "wit"

[package.metadata.component.dependencies]